--- a/test-output/old/Automation Test Suite/methods-alphabetical.html
+++ b/test-output/old/Automation Test Suite/methods-alphabetical.html
@@ -1,20 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70d1b1">  <td>18/06/18 14:27:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.Home()[pri:14, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">Home</td> 
-  <td>main@146305349</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/18 14:27:05</td>   <td>4523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.adminLogin(java.lang.String, java.lang.String)[pri:15, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">adminLogin</td> 
-  <td>main@146305349</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/18 14:26:16</td>   <td>-44297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:13, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">loginTest</td> 
-  <td>main@146305349</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/18 14:27:29</td>   <td>28380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierLoginTest.loginTest(java.lang.String, java.lang.String)[pri:16, instance:testcases.CarrierLoginTest@a74868d]">loginTest</td> 
-  <td>main@146305349</td>   <td></td> </tr>
-<tr bgcolor="a7b76d">  <td>18/06/18 14:27:17</td>   <td>16988</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
-<tr bgcolor="a7b76d">  <td>18/06/18 14:27:37</td>   <td>36485</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierLoginTest@a74868d]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/18 14:26:04</td>   <td>-56122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierlockedaccountcanbeunlockedbyadminTest.setUp()[pri:0, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/18 14:27:18</td>   <td>17776</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierLoginTest.setUp()[pri:0, instance:testcases.CarrierLoginTest@a74868d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/06/19 14:20:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.BrokerOutlookTest(java.lang.String, java.lang.String)[pri:63, instance:testcases.BrokerAvailableCreditTabTest@2de8284b]">BrokerOutlookTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/06/19 14:20:51</td>   <td>-78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.ClickBrokerAvailableCreditTabTest()[pri:60, instance:testcases.BrokerAvailableCreditTabTest@2de8284b]">ClickBrokerAvailableCreditTabTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6bdb79">  <td>18/06/19 14:20:53</td>   <td>2457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.Home()[pri:87, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">Home</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/06/19 14:20:51</td>   <td>-78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.RequestAdditionalCreditButtonTest()[pri:61, instance:testcases.BrokerAvailableCreditTabTest@2de8284b]">RequestAdditionalCreditButtonTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/06/19 14:20:51</td>   <td>-63</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.RequestAdditionalCreditPopUpTest()[pri:62, instance:testcases.BrokerAvailableCreditTabTest@2de8284b]">RequestAdditionalCreditPopUpTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6bdb79">  <td>18/06/19 14:20:53</td>   <td>2581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.adminLogin(java.lang.String, java.lang.String)[pri:88, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">adminLogin</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/19 14:20:09</td>   <td>-41633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminPayMeNowLockTest.getBrokerCredentials(java.lang.String, java.lang.String)[pri:56, instance:testcases.AdminPayMeNowLockTest@78ac1102]">getBrokerCredentials</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/06/19 14:20:51</td>   <td>-78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.loginBrokerTest(java.lang.String, java.lang.String)[pri:59, instance:testcases.BrokerAvailableCreditTabTest@2de8284b]">loginBrokerTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6bdb79">  <td>18/06/19 14:20:53</td>   <td>2457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:86, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">loginTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6bdb79">  <td>18/06/19 14:20:53</td>   <td>2519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.loginTest(java.lang.String, java.lang.String)[pri:87, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">loginTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="7080dc">  <td>18/06/19 14:20:48</td>   <td>-3119</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.AdminPayMeNowLockTest@78ac1102]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/19 14:19:59</td>   <td>-51897</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AdminPayMeNowLockTest.setUp()[pri:0, instance:testcases.AdminPayMeNowLockTest@78ac1102]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6be76a">  <td>18/06/19 14:20:48</td>   <td>-2414</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerAvailableCreditTabTest.setUp()[pri:0, instance:testcases.BrokerAvailableCreditTabTest@2de8284b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="6bdb79">  <td>18/06/19 14:20:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierlockedaccountcanbeunlockedbyadminTest.setUp()[pri:0, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/19 14:20:09</td>   <td>-41535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminPayMeNowLockTest.verifyLockPayMeNowStatus(java.lang.String, java.lang.String)[pri:57, instance:testcases.AdminPayMeNowLockTest@78ac1102]">verifyLockPayMeNowStatus</td> 
+  <td>main@194706439</td>   <td></td> </tr>
 </table>
