--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.loginBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">loginBroker</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="96b1f3">  <td>18/06/17 21:17:52</td>   <td>35892</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:08</td>   <td>-8806</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerBulkUploadPaymentsUnmatchedCarrierTest.setUp()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:45</td>   <td>28934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyAmountSearchTest()[pri:17, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyAmountSearchTest</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:22</td>   <td>6112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyBulkUploadPaymentsmatched()[pri:2, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyBulkUploadPaymentsmatched</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:33</td>   <td>16727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickGridDown()[pri:7, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyClickGridDown</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:28</td>   <td>11453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickimport()[pri:5, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyClickimport</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:30</td>   <td>13514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickschpayment()[pri:6, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyClickschpayment</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:49</td>   <td>32467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyLoadIDNumSearchTest()[pri:20, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyLoadIDNumSearchTest</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:24</td>   <td>7225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyUploadFile()[pri:4, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyUploadFile</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:36</td>   <td>19880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyclickAmountSortTest()[pri:12, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyclickAmountSortTest</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:41</td>   <td>24470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyclickLoadIDSortTest()[pri:15, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyclickLoadIDSortTest</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:22</td>   <td>6118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifynewPayment()[pri:3, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifynewPayment</td> 
-  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:58:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:58:26</td>   <td>18340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:58:44</td>   <td>36281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:59:01</td>   <td>54272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:59:20</td>   <td>72340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:59:38</td>   <td>90490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:59:56</td>   <td>108471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 13:00:14</td>   <td>126833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 13:00:32</td>   <td>145151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 13:00:51</td>   <td>163506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 13:01:09</td>   <td>181932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 13:01:28</td>   <td>200313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 13:01:46</td>   <td>218768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 13:02:04</td>   <td>237231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.brokernewPayment(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:17, instance:testcases.BrokerNewPaymentTest@1fc2b765]">brokernewPayment</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:58:01</td>   <td>-6682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerNewPaymentTest.loginBroker(java.lang.String, java.lang.String)[pri:16, instance:testcases.BrokerNewPaymentTest@1fc2b765]">loginBroker</td> 
+  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="7d7d99">  <td>18/06/19 13:02:24</td>   <td>256435</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerNewPaymentTest@1fc2b765]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1640639994</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/19 12:57:50</td>   <td>-17272</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerNewPaymentTest.setUp()[pri:0, instance:testcases.BrokerNewPaymentTest@1fc2b765]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1640639994</td>   <td></td> </tr>
 </table>
